src/test/ui/feature-gates/feature-gate-link_cfg.stderr
error[E0658]: is feature gated
  --> $DIR/feature-gate-link_cfg.rs:1:1
   |
LL | #[link(name = "foo", cfg(foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/37406
   = help: add #![feature(link_cfg)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
